[package]
name = "kcp-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
backtrace = "0.3.61"
bincode = "1.3.3"
byteorder = "1.4.3"
fn-error-context = "0.2.0"
mio = { version = "0.7.14", features = ["net", "os-poll"] }
mockall = "0.10.2"
protobuf = "2.25.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.71"
protoc-rust = "2.25.1"
